--- a/client/src/app/people/components/list-people/list-people.component.html
+++ b/client/src/app/people/components/list-people/list-people.component.html
@@ -2,6 +2,17 @@
 <div class="container main-container">
   <h2>People</h2>
 
+  <div class="row">
+    <div class="col-md-12">
+      <div class="pull-left">
+        <a class="btn btn-primary" id="novoEvento" [routerLink]="['/people/create']">
+          <span title="Novo Evento" class="glyphicon glyphicon-plus-sign"></span> Novo Evento
+        </a>
+      </div>
+    </div>
+  </div>
+  <br>
+
   <div class='text-danger' *ngIf='errorMessage'>{{errorMessage}}</div>
 
   <div class="page-size">
@@ -21,8 +32,11 @@
             <td>{{ person.age }}</td>
             <td>{{ person.vaccines.length }}</td>
             <td>
+              <a [routerLink]="['/people/edit', evento.id]" title="Edit" class="btn btn-warning">
+                <span class="glyphicon glyphicon-pencil"></span>
+              </a>
               <a [routerLink]="['/people/remove', person.id]" title="Remove" class="btn btn-danger">
-                <span class="glyphicon glyphicon-trash"></span> 
+                <span class="glyphicon glyphicon-trash"></span>
               </a>
             </td>
           </tr>
