Fix label button

--- a/client/src/app/people/components/list-people/list-people.component.html
+++ b/client/src/app/people/components/list-people/list-people.component.html
@@ -6,7 +6,7 @@
     <div class="col-md-12">
       <div class="pull-left">
         <a class="btn btn-primary" id="novoEvento" [routerLink]="['/people/create']">
-          <span title="Novo Evento" class="glyphicon glyphicon-plus-sign"></span> Novo Evento
+          <span title="New Person" class="glyphicon glyphicon-plus-sign"></span> New Person
         </a>
       </div>
     </div>
